# dm_app_with_django

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
config/: settings.py
src/app/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py
src/app/forms/: __init__.py  conversation.py  login.py
src/app/migrations/: 0001_initial.py  0002_alter_conversation_user1_alter_conversation_user2.py  0003_message_conversation_alter_message_user_delete_user.py  0004_conversation_users.py
src/app/models/: __init__.py  conversation.py  message.py  user.py
src/app/serializers/: __init__.py  conversations.py  message.py
src/app/static/: style.css
src/app/static/conversations/: request.js  style.css
src/app/templates/: base.html  index.html
src/app/templates/auth/: login.html
src/app/templates/conversations/: detail.html  list.html
src/app/templates/registration/: base.html  login.html
src/app/templates/users/: detail.html  list.html
src/app/utils/: custom_exception_handler.py
src/app/views/: __init__.py  auth.py  conversation.py  user.py
src/config/: asgi.py  settings.py  urls.py
src/config/auth/: __init__.py  custom_backend.py
src/templates/admin/: base.html  index.html  login.html
