[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myproject"
version = "1.0"
dependencies = [
  "dj-database-url",
  "django==4.1.*",
  "gunicorn",
  "whitenoise",
]

[project.optional-dependencies]
dev = [
  "django-stubs",
  "ipdb",
  "pip-tools",
  "ruff",
  "pre-commit",
]
