[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myproject"
version = "1.0"
dependencies = [
  "dj-database-url",
  "django==4.1.*",
  "gunicorn",
  "whitenoise",
  "channels[daphne]",
]

[project.optional-dependencies]
dev = [
  "djangorestframework",
  "django-stubs",
  "ipdb",
  "pip-tools",
  "mypy",
  "ruff",
  "pre-commit",
]

[tool.mypy]
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main",
]

[tool.django-stubs]
django_settings_module = "src.config.settings"
